[package]
name = "Rust-Web-Starter"
version = "0.1.0"
authors = ["Karthik Kumar Viswanathan <karthikkumar@gmail.com>"]
edition = "2018"

[dependencies]

rocket = "0.4.7"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
pretty_env_logger = "0.4.0"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
debug = false
lto = false
codegen-units = 256
